# csharp_swig_unicode_test

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  copy_string.cpp  copy_string.h  csharp_api.i  test_api.csproj.in  wchar.i
test/: CMakeLists.txt  main.cs
